작업진행중

--- a/소통협력센터/html/index copy.html
+++ b/소통협력센터/html/index copy.html
@@ -148,6 +148,7 @@
 		<!-- container -->
 		<div class="container">
 			<main class="pg-main">
+
 				<div class="visual-swiper">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
@@ -229,8 +230,8 @@
 
 				<div class="news-wrap">
 					<h2>참여와 소식</h2>
-					<div class="inner">
-						<ul class="news-list">
+					<div class="inner"> 
+						<ul class="card-list">
 							<li>
 								<mark class="label-p">프로그램</mark>
 								<a href="#none">
@@ -263,7 +264,7 @@
 									<span class="date">2020.10.11(일)</span>
 								</a>
 							</li>
-						</ul>
+						</ul>  
 					</div>
 				</div>
 
@@ -273,20 +274,13 @@
 						<!-- tabs -->
 						<div class="tabs">
 							<div role="tablist" aria-label="Entertainment">
-								<button type="button" role="tab" aria-selected="true" aria-controls="section1"
-									id="tab1">추천<em>4</em></button>
-								<button type="button" role="tab" aria-selected="false" aria-controls="section2"
-									id="tab2" tabindex="-1">환경<em>4</em></button>
-								<button type="button" role="tab" aria-selected="false" aria-controls="section3"
-									id="tab3" tabindex="-1">문화<em>9</em></button>
-								<button type="button" role="tab" aria-selected="false" aria-controls="section4"
-									id="tab4" tabindex="-1">지역공동체<em>10</em></button>
-								<button type="button" role="tab" aria-selected="false" aria-controls="section5"
-									id="tab5" tabindex="-1">산업/경제<em>12</em></button>
-								<button type="button" role="tab" aria-selected="false" aria-controls="section6"
-									id="tab6" tabindex="-1">교육<em>7</em></button>
-								<button type="button" role="tab" aria-selected="false" aria-controls="section7"
-									id="tab7" tabindex="-1">기타<em>12</em></button>
+								<button type="button" role="tab" aria-selected="true" aria-controls="section1" id="tab1">추천<br>4</button>
+								<button type="button" role="tab" aria-selected="false" aria-controls="section2" id="tab2" tabindex="-1">환경<br>4</button>
+								<button type="button" role="tab" aria-selected="false" aria-controls="section3" id="tab3" tabindex="-1">문화<br>12</button>
+								<button type="button" role="tab" aria-selected="false" aria-controls="section4" id="tab4" tabindex="-1">지역공동체<br>2</button>
+								<button type="button" role="tab" aria-selected="false" aria-controls="section5" id="tab5" tabindex="-1">산업/경제<br>4</button>
+								<button type="button" role="tab" aria-selected="false" aria-controls="section6" id="tab6" tabindex="-1">교육<br>3</button>
+								<button type="button" role="tab" aria-selected="false" aria-controls="section7" id="tab7" tabindex="-1">기타<br>4</button>
 							</div>
 							<div tabindex="0" role="tabpanel" id="section1" aria-labelledby="tab1">
 								<div class="card-swiper">
@@ -405,185 +399,26 @@
 								</div>
 							</div>
 
-							<div tabindex="0" role="tabpanel" id="section2" aria-labelledby="tab2" hidden>
+							<div tabindex="0" role="tabpanel" id="section2" aria-labelledby="tab2" hidden="">
 								탭2
 							</div>
-							<div tabindex="0" role="tabpanel" id="section3" aria-labelledby="tab3" hidden>
+							<div tabindex="0" role="tabpanel" id="section3" aria-labelledby="tab3" hidden="">
 								탭3
 							</div>
-							<div tabindex="0" role="tabpanel" id="section4" aria-labelledby="tab4" hidden>
+							<div tabindex="0" role="tabpanel" id="section4" aria-labelledby="tab4" hidden="">
 								탭4
 							</div>
-							<div tabindex="0" role="tabpanel" id="section5" aria-labelledby="tab5" hidden>
+							<div tabindex="0" role="tabpanel" id="section5" aria-labelledby="tab5" hidden="">
 								탭5
 							</div>
-							<div tabindex="0" role="tabpanel" id="section6" aria-labelledby="tab6" hidden>
+							<div tabindex="0" role="tabpanel" id="section6" aria-labelledby="tab6" hidden="">
 								탭6
 							</div>
-							<div tabindex="0" role="tabpanel" id="section7" aria-labelledby="tab7" hidden>
+							<div tabindex="0" role="tabpanel" id="section7" aria-labelledby="tab7" hidden="">
 								탭7
 							</div>
 						</div>
 						<!--// tabs -->
-					</div>
-				</div>
-
-
-				<div class="card-wrap" style="display:none;">
-					<h2><strong>1,232</strong> 개의 혁신카드</h2>
-					<div class="inner">
-						<ul class="card-tab" role="tablist">
-							<li role="tab" aria-controls="section1" id="tab1" class="active"><span>추천<em>4</em></span>
-							</li>
-							<li role="tab" aria-controls="section2" id="tab2"><span>환경<em>4</em></span></li>
-							<li role="tab" aria-controls="section3" id="tab3"><span>문화<em>9</em></span></li>
-							<li role="tab" aria-controls="section4" id="tab4"><span>지역공동체<em>10</em></span></li>
-							<li role="tab" aria-controls="section5" id="tab5"><span>산업/경제<em>12</em></span></li>
-							<li role="tab" aria-controls="section6" id="tab6"><span>교육<em>7</em></span></li>
-							<li role="tab" aria-controls="section7" id="tab7"><span>기타<em>12</em></span></li>
-						</ul>
-						<div role="tabpanel" id="section1" aria-labelledby="tab1" class="tab-conts focusActive">
-							<div class="card-swiper">
-								<div class="swiper-wrapper">
-									<div class="swiper-slide">
-										<div class="swiper-wrap">
-											<a href="#none">
-												<span class="tag">
-													<em class="main-tag">#대주제</em>
-													<em class="sub-tag">#부주제</em>
-													<em class="sub-tag">#부주제</em>
-												</span>
-												<em class="img"><img src="../resource/img/@img05.png" alt=""></em>
-												<strong class="tit">환경을위한생활개선 프로젝트</strong>
-											</a>
-										</div>
-
-										<div class="swiper-wrap">
-											<a href="#none">
-												<span class="tag">
-													<em class="main-tag">#대주제</em>
-													<em class="sub-tag">#부주제</em>
-													<em class="sub-tag">#부주제</em>
-												</span>
-												<em class="img"><img src="../resource/img/@img06.png" alt=""></em>
-												<strong class="tit">환경을위한생활개선 프로젝트</strong>
-											</a>
-										</div>
-
-										<div class="swiper-wrap">
-											<a href="#none">
-												<span class="tag">
-													<em class="main-tag">#대주제대주제대주제</em>
-													<em class="sub-tag">#부주제부주제부주제부주제</em>
-													<em class="sub-tag">#부주제부주제부주제제부주제제부주제제부주제제부주제</em>
-												</span>
-												<em class="img"><img src="../resource/img/@img07.png" alt=""></em>
-												<strong class="tit">환경을위한생활개선 프로젝트</strong>
-											</a>
-										</div>
-
-										<div class="swiper-wrap">
-											<a href="#none">
-												<span class="tag">
-													<em class="main-tag">#대주제</em>
-													<em class="sub-tag">#부주제</em>
-													<em class="sub-tag">#부주제부주제부주제</em>
-												</span>
-												<em class="img"><img src="../resource/img/@img08.png" alt=""></em>
-												<strong class="tit">환경을위한생활개선 프로젝트</strong>
-											</a>
-										</div>
-									</div>
-
-									<div class="swiper-slide">
-										<div class="swiper-wrap">
-											<a href="#none">
-												<span class="tag">
-													<em class="main-tag">#대주제</em>
-													<em class="sub-tag">#부주제</em>
-													<em class="sub-tag">#부주제</em>
-												</span>
-												<em class="img"><img src="../resource/img/@img05.png" alt=""></em>
-												<strong class="tit">환경을위한생활개선 프로젝트</strong>
-											</a>
-										</div>
-
-										<div class="swiper-wrap">
-											<a href="#none">
-												<span class="tag">
-													<em class="main-tag">#대주제</em>
-													<em class="sub-tag">#부주제</em>
-													<em class="sub-tag">#부주제</em>
-												</span>
-												<em class="img"><img src="../resource/img/@img06.png" alt=""></em>
-												<strong class="tit">환경을위한생활개선 프로젝트</strong>
-											</a>
-										</div>
-
-										<div class="swiper-wrap">
-											<a href="#none">
-												<span class="tag">
-													<em class="main-tag">#대주제</em>
-													<em class="sub-tag">#부주제</em>
-													<em class="sub-tag">#부주제</em>
-												</span>
-												<em class="img"><img src="../resource/img/@img07.png" alt=""></em>
-												<strong class="tit">환경을위한생활개선 프로젝트</strong>
-											</a>
-										</div>
-
-										<div class="swiper-wrap">
-											<a href="#none">
-												<span class="tag">
-													<em class="main-tag">#대주제</em>
-													<em class="sub-tag">#부주제</em>
-													<em class="sub-tag">#부주제</em>
-												</span>
-												<em class="img"><img src="../resource/img/@img08.png" alt=""></em>
-												<strong class="tit">환경을위한생활개선 프로젝트</strong>
-											</a>
-										</div>
-									</div>
-
-								</div>
-								<!-- Add Pagination -->
-								<div class="swiper-pagination"></div>
-
-								<!-- Add Arrows -->
-								<div class="swiper-button-next"><i>이전</i></div>
-								<div class="swiper-button-prev"><i>다음</i></div>
-								<div class="btn-w">
-									<button type="button" class="btn-play">시작</button>
-									<button type="button" class="btn-pause">정지</button>
-								</div>
-							</div>
-						</div>
-
-						<div role="tabpanel" id="section2" aria-labelledby="tab2" class="tab-conts">
-							탭2
-						</div>
-						<div role="tabpanel" id="section3" aria-labelledby="tab3" class="tab-conts">
-							탭3
-						</div>
-						<div role="tabpanel" id="section4" aria-labelledby="tab4" class="tab-conts">
-							탭4
-						</div>
-						<div role="tabpanel" id="section5" aria-labelledby="tab5" class="tab-conts">
-							탭5
-						</div>
-						<div role="tabpanel" id="section6" aria-labelledby="tab6" class="tab-conts">
-							탭6
-						</div>
-						<div role="tabpanel" id="section7" aria-labelledby="tab7" class="tab-conts">
-							탭7
-						</div>
-					</div>
-				</div>
-
-				<div class="newsletter-wrap">
-					<div class="inner">
-						<span class="btn-newslette"><a href="#none"><i class="hidden">News letter</i>뉴스레터
-								구독하기</a></span>
 					</div>
 				</div>
 
@@ -601,7 +436,7 @@
 											곳으로부터 밝은 빛을 찾아 제주의</span>
 									</p>
 								</a>
-								<div class="tag-wrap">
+								<div class="tag">
 									<button type="button">#제주</button>
 									<button type="button">#문화</button>
 									<button type="button">#제주생활탐구</button>
@@ -617,7 +452,7 @@
 											운 뒤, 약 20여 년간 도남동에서 미용.</span>
 									</p>
 								</a>
-								<div class="tag-wrap">
+								<div class="tag">
 									<button type="button">#미용사</button>
 									<button type="button">#도남오거리도남오거리도남오거리</button>
 									<button type="button">#돌보미</button>
@@ -630,6 +465,14 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="newsletter-wrap">
+					<div class="inner">
+						<span class="btn-newslette"><a href="#none"><i class="hidden">News letter</i>뉴스레터
+								구독하기</a></span>
+					</div>
+				</div>
+
 			</main>
 		</div>
 		<!--  // container -->
@@ -679,7 +522,7 @@
 					</ul>
 					<div class="link-wrap">
 						<span class="select">
-							<!-- <label class="blind" for="sitelink">관련사이트</label> -->
+							<label class="hidden" for="sitelink">관련사이트</label>
 							<span>
 								<select name="" id="sitelink" class="select1">
 									<option value="http://www.jejusi.go.kr/index.ac">제주시</option>
@@ -714,8 +557,9 @@
 
 	<script src="../resource/js/lib/jquery-3.4.1.min.js"></script>
 	<script src="../resource/js/lib/swiper.min.js"></script>
-	<script src="../resource/js/ui.js"></script>
 	<script src="../resource/js/tabs.js"></script>
+	<script src="../resource/js/ui.js"></script>
+
 
 	<script>
 		//메인 비주얼
