--- a/소통협력센터/html/inc/layout.html
+++ b/소통협력센터/html/inc/layout.html
@@ -214,8 +214,8 @@
 						<li><a href="#none">지역혁신사례제보</a></li>
 						<li><a href="#none">뉴스레터구독</a></li>
 						<li><a href="#none">이용약관</a></li>
-						<li><a href="#none"><strong>개인정보처리방침</strong></a></li>
-						<li><a href="#none">사이트맵</a></li>
+						<li><a href="#none"><strong>개인정보처리방침</strong></a></li> 
+						<li><a href="#none">오시는길</a></li>
 					</ul> 
 					<div class="link-wrap">
 						<span class="select">
@@ -239,12 +239,14 @@
 			<div class="foot-info">
 				<div class="inner">
 					<mark>제주시 소통협력 센터</mark>
-					<p class="text-wrap"><span>제주시소통협력센터 센터장 민복기</span> <span>제주특별자치도 제주시 관덕로 44</span></p>
-					<p class="text-wrap"><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span><span>E-MAIL : jejust@gmail.com</span></p>
-					<p class="text-wrap"><span>개인정보관리자 민복기</span><span>고유번호 000-00-000000</span></p>
-					<p class="text-wrap">Copyright© 제주시소통협력센터. ALL RIGHTS RESERVED</p>
+					<p><span>제주시소통협력센터 센터장 민복기</span> <span>제주특별자치도 제주시 관덕로 44</span></p>
+					<p><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span>E-MAIL : jejust@gmail.com<span></span></p>
+					<p><span>개인정보관리자 민복기</span><span>고유번호 000-00-000000</span></p>
+					<p>Copyright© 제주시소통협력센터. ALL RIGHTS RESERVED</p>
 				</div>
-			</div>  
+			</div>
+
+			 
 		</footer>
 		<!--// footer -->
 	</div>
