--- a/소통협력센터/html/common/password.html
+++ b/소통협력센터/html/common/password.html
@@ -227,7 +227,7 @@
 						<li><a href="#none">뉴스레터구독</a></li>
 						<li><a href="#none">이용약관</a></li>
 						<li><a href="#none"><strong>개인정보처리방침</strong></a></li>
-						<li><a href="#none">사이트맵</a></li>
+						<li><a href="#none">오시는길</a></li>
 					</ul> 
 					<div class="link-wrap">
 						<span class="select">
