--- a/소통협력센터/html/inc/footer.html
+++ b/소통협력센터/html/inc/footer.html
@@ -21,55 +21,45 @@
 
 		<!-- footer -->
 		<footer class="footer">
-			<div class="foot-banner-wrap">
+			<div class="foot-banner-wrap"> 
 				<div class="inner">
 					<div class="footerbanner">
 						<div class="swiper-wrapper">
-							<div class="swiper-slide"><a href="#none"><img src="../resource/img/@banner01.png" alt="제주시"></a>
-							</div>
-							<div class="swiper-slide"><a href="#none"><img src="../resource/img/@banner02.png"
-										alt="제주특별자치도"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../resource/img/@banner03.png" alt="행정안정부"></a>
-							</div>
-							<div class="swiper-slide"><a href="#none"><img src="../resource/img/@banner04.png"
-										alt="행복나눔제주공동체"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../resource/img/@banner05.png"
-										alt="중소기업 성공 길잡이 기업마당"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../resource/img/@banner01.png" alt="제주시"></a>
-							</div>
-							<div class="swiper-slide"><a href="#none"><img src="../resource/img/@banner02.png"
-										alt="제주특별자치도"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../resource/img/@banner03.png" alt="행정안정부"></a>
-							</div>
-							<div class="swiper-slide"><a href="#none"><img src="../resource/img/@banner04.png"
-										alt="행복나눔제주공동체"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../resource/img/@banner05.png"
-										alt="중소기업 성공 길잡이 기업마당"></a></div>
+							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner01.png" alt="제주시"></a></div>
+							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner02.png" alt="제주특별자치도"></a></div>
+							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner03.png" alt="행정안정부"></a></div>
+							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner04.png" alt="행복나눔제주공동체"></a></div>
+							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner05.png" alt="중소기업 성공 길잡이 기업마당"></a></div>
+							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner01.png" alt="제주시"></a></div>
+							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner02.png" alt="제주특별자치도"></a></div>
+							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner03.png" alt="행정안정부"></a></div>
+							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner04.png" alt="행복나눔제주공동체"></a></div>
+							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner05.png" alt="중소기업 성공 길잡이 기업마당"></a></div>
 						</div>
 					</div>
 					<!-- Add Arrows -->
 					<div class="swiper-button-next"><i>이전</i></div>
 					<div class="swiper-button-prev"><i>다음</i></div>
-				</div>
+				</div> 
 			</div>
-		
+
 			<div class="foot-menu-wrap">
 				<div class="inner">
 					<ul class="foot-menu">
 						<li><a href="#none">지역혁신사례제보</a></li>
 						<li><a href="#none">뉴스레터구독</a></li>
 						<li><a href="#none">이용약관</a></li>
-						<li><a href="#none"><strong>개인정보처리방침</strong></a></li>
+						<li><a href="#none"><strong>개인정보처리방침</strong></a></li> 
 						<li><a href="#none">오시는길</a></li>
-					</ul>
+					</ul> 
 					<div class="link-wrap">
 						<span class="select">
 							<label class="hidden" for="sitelink">관련사이트</label>
 							<span>
-								<select name="" id="sitelink" class="select1">
-									<option value="http://www.jejusi.go.kr/index.ac">제주시</option>
+								<select name="" id="sitelink" class="select1">  
+									<option value="http://www.jejusi.go.kr/index.ac">제주시</option> 
 								</select>
-							</span>
+							</span> 
 							<button class="btn_sel">이동</button>
 						</span>
 						<span class="sns-wrap">
@@ -78,21 +68,20 @@
 							<a href="#none" class="btn-instagram">인스타그램</a>
 						</span>
 					</div>
-				</div>
+				</div> 
 			</div>
-		
+
 			<div class="foot-info">
 				<div class="inner">
 					<mark>제주시 소통협력 센터</mark>
 					<p><span>제주시소통협력센터 센터장 민복기</span> <span>제주특별자치도 제주시 관덕로 44</span></p>
-					<p><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span>E-MAIL : jejust@gmail.com<span></span>
-					</p>
+					<p><span>전화번호 : 064-000-0000</span><span>FAX : 0303-000-0000</span>E-MAIL : jejust@gmail.com<span></span></p>
 					<p><span>개인정보관리자 민복기</span><span>고유번호 000-00-000000</span></p>
 					<p>Copyright© 제주시소통협력센터. ALL RIGHTS RESERVED</p>
 				</div>
 			</div>
-		
-		
+
+			 
 		</footer>
 		<!--// footer -->
 
