참여안내작업중

--- a/소통협력센터/html/communication/blog_search.html
+++ b/소통협력센터/html/communication/blog_search.html
@@ -196,94 +196,96 @@
 						<div class="search-result">
 							‘<strong>#제주생활탐구</strong>’ 의 검색결과 <em>/</em> <strong>3</strong>건
 						</div>
-					
-						<ul class="commun-list">
-							<li>
-								<a href="#none">
-									<p class="img"><img src="../../resource/img/@img09.png" alt=""></em>
-									<p class="text-wrap">
-										<strong class="tit">사람과 사람이 이어지고, 마음이 무르익고.</strong>
-										<span>햇과일과 햇곡식이 풍성한 가을, 마음도 계절 따라 무르익어 갑니다. 제주시 소통협력센터의 두 번째 뉴스레터는 한 가지 물음에서 시작합니
-										다. “사람과 사람은 어떻게 만날까?” 일상의 변화를 꿈꾸는 ‘가장 작은 캠페인’을 통해 서로 마음을 여는 사람들, 어두운 곳으로부터 밝은 빛
-										을 찾아 제주의 현재를 바라보는 사람들의 마음을 만났습니다. 이심전심(以心傳心), 마음에서 마음으로 뜻을 전한다는 말이 있지요.</span>
-									</p>
-								</a>
-								<div class="date-wrap">
-									<span>2020.10.11</span>
-									<span>조회수 <em>90</em></span>
-								</div>
-								<div class="tag">
-									<button type="button">#제주</button>
-									<button type="button">#문화</button>
-									<button type="button">#제주생활탐구</button>
-								</div>
-							</li>
-							<li>
-								<a href="#none">
-									<p class="img"><img src="../../resource/img/@img10.png" alt=""></p>
-									<p class="text-wrap">
-										<strong class="tit">마음을 가꾸는 사람 _ 독거 노인 돌보미 강정숙</strong>
-										<span>도남오거리 근처에 살고 있는 강정숙 씨
-											는 스물 일곱 무렵 뒤늦게 미용 기술을 배
-											운 뒤, 약 20여 년간 도남동에서 미용.</span> 
-									</p>
-								</a>
-								<div class="date-wrap">
-									<span>2020.10.11</span>
-									<span>조회수 <em>90</em></span>
-								</div>
-								<div class="tag">
-									<button type="button">#미용사</button>
-									<button type="button">#도남오거리도남오거리도남오거리</button>
-									<button type="button">#돌보미</button>
-								</div>
-							</li>
-							<li>
-								<a href="#none">
-									<p class="img"><img src="../../resource/img/@img10.png" alt=""></p>
-									<p class="text-wrap">
-										<strong class="tit">마음을 가꾸는 사람 _ 독거 노인 돌보미 강정숙</strong>
-										<span>도남오거리 근처에 살고 있는 강정숙 씨
-											는 스물 일곱 무렵 뒤늦게 미용 기술을 배
-											운 뒤, 약 20여 년간 도남동에서 미용.</span>
-									</p>
-								</a>
-								<div class="date-wrap">
-									<span>2020.10.11</span>
-									<span>조회수 <em>90</em></span>
-								</div>
-								<div class="tag">
-									<button type="button">#미용사</button>
-									<button type="button">#도남오거리도남오거리도남오거리</button>
-									<button type="button">#돌보미</button>
-								</div>
-							</li>
-							<li>
-								<a href="#none">
-									<p class="img"><img src="../../resource/img/@img10.png" alt=""></p>
-									<p class="text-wrap">
-										<strong class="tit">마음을 가꾸는 사람 _ 독거 노인 돌보미 강정숙</strong>
-										<span>도남오거리 근처에 살고 있는 강정숙 씨
-											는 스물 일곱 무렵 뒤늦게 미용 기술을 배
-											운 뒤, 약 20여 년간 도남동에서 미용.</span>
-									</p>
-								</a>
-								<div class="date-wrap">
-									<span>2020.10.11</span>
-									<span>조회수 <em>90</em></span>
-								</div>
-								<div class="tag">
-									<button type="button">#미용사</button>
-									<button type="button">#도남오거리도남오거리도남오거리</button>
-									<button type="button">#돌보미</button>
-								</div>
-							</li>
 
-							<!-- 목록 없을 때 -->
-							<li class="list-none">
-								<p>등록된 글이 없습니다.</p>
-							</li>
-						</ul>
+						<div class="search-list-wrap">
+							<ul class="commun-list">
+								<li>
+									<a href="#none">
+										<p class="img"><img src="../../resource/img/@img09.png" alt=""></em>
+											<p class="text-wrap">
+												<strong class="tit">사람과 사람이 이어지고, 마음이 무르익고.</strong>
+												<span>햇과일과 햇곡식이 풍성한 가을, 마음도 계절 따라 무르익어 갑니다. 제주시 소통협력센터의 두 번째 뉴스레터는 한 가지 물음에서 시작합니
+													다. “사람과 사람은 어떻게 만날까?” 일상의 변화를 꿈꾸는 ‘가장 작은 캠페인’을 통해 서로 마음을 여는 사람들, 어두운 곳으로부터 밝은 빛
+													을 찾아 제주의 현재를 바라보는 사람들의 마음을 만났습니다. 이심전심(以心傳心), 마음에서 마음으로 뜻을 전한다는 말이 있지요.</span>
+											</p>
+									</a>
+									<div class="date-wrap">
+										<span>2020.10.11</span>
+										<span>조회수 <em>90</em></span>
+									</div>
+									<div class="tag">
+										<button type="button">#제주</button>
+										<button type="button">#문화</button>
+										<button type="button">#제주생활탐구</button>
+									</div>
+								</li>
+								<li>
+									<a href="#none">
+										<p class="img"><img src="../../resource/img/@img10.png" alt=""></p>
+										<p class="text-wrap">
+											<strong class="tit">마음을 가꾸는 사람 _ 독거 노인 돌보미 강정숙</strong>
+											<span>도남오거리 근처에 살고 있는 강정숙 씨
+												는 스물 일곱 무렵 뒤늦게 미용 기술을 배
+												운 뒤, 약 20여 년간 도남동에서 미용.</span>
+										</p>
+									</a>
+									<div class="date-wrap">
+										<span>2020.10.11</span>
+										<span>조회수 <em>90</em></span>
+									</div>
+									<div class="tag">
+										<button type="button">#미용사</button>
+										<button type="button">#도남오거리도남오거리도남오거리</button>
+										<button type="button">#돌보미</button>
+									</div>
+								</li>
+								<li>
+									<a href="#none">
+										<p class="img"><img src="../../resource/img/@img10.png" alt=""></p>
+										<p class="text-wrap">
+											<strong class="tit">마음을 가꾸는 사람 _ 독거 노인 돌보미 강정숙</strong>
+											<span>도남오거리 근처에 살고 있는 강정숙 씨
+												는 스물 일곱 무렵 뒤늦게 미용 기술을 배
+												운 뒤, 약 20여 년간 도남동에서 미용.</span>
+										</p>
+									</a>
+									<div class="date-wrap">
+										<span>2020.10.11</span>
+										<span>조회수 <em>90</em></span>
+									</div>
+									<div class="tag">
+										<button type="button">#미용사</button>
+										<button type="button">#도남오거리도남오거리도남오거리</button>
+										<button type="button">#돌보미</button>
+									</div>
+								</li>
+								<li>
+									<a href="#none">
+										<p class="img"><img src="../../resource/img/@img10.png" alt=""></p>
+										<p class="text-wrap">
+											<strong class="tit">마음을 가꾸는 사람 _ 독거 노인 돌보미 강정숙</strong>
+											<span>도남오거리 근처에 살고 있는 강정숙 씨
+												는 스물 일곱 무렵 뒤늦게 미용 기술을 배
+												운 뒤, 약 20여 년간 도남동에서 미용.</span>
+										</p>
+									</a>
+									<div class="date-wrap">
+										<span>2020.10.11</span>
+										<span>조회수 <em>90</em></span>
+									</div>
+									<div class="tag">
+										<button type="button">#미용사</button>
+										<button type="button">#도남오거리도남오거리도남오거리</button>
+										<button type="button">#돌보미</button>
+									</div>
+								</li>
+							
+								<!-- 목록 없을 때 -->
+								<li class="list-none">
+									<p>등록된 글이 없습니다.</p>
+								</li>
+							</ul>
+						</div> 
 
 						<div class="pagination">
 							<a href="#none" class="btn-page btn-first"><i class="icon-nav-first">처음</i></a>
@@ -307,29 +309,7 @@
 		<!--  // container -->
 
 		<!-- footer -->
-		<footer class="footer">
-			<div class="foot-banner-wrap"> 
-				<div class="inner">
-					<div class="footerbanner">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner01.png" alt="제주시"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner02.png" alt="제주특별자치도"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner03.png" alt="행정안정부"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner04.png" alt="행복나눔제주공동체"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner05.png" alt="중소기업 성공 길잡이 기업마당"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner01.png" alt="제주시"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner02.png" alt="제주특별자치도"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner03.png" alt="행정안정부"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner04.png" alt="행복나눔제주공동체"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner05.png" alt="중소기업 성공 길잡이 기업마당"></a></div>
-						</div>
-					</div>
-					<!-- Add Arrows -->
-					<div class="swiper-button-next"><i>이전</i></div>
-					<div class="swiper-button-prev"><i>다음</i></div>
-				</div> 
-			</div>
-
+		<footer class="footer">  
 			<div class="foot-menu-wrap">
 				<div class="inner">
 					<ul class="foot-menu">
