--- a/소통협력센터/html/communication/notice_list.html
+++ b/소통협력센터/html/communication/notice_list.html
@@ -197,8 +197,10 @@
 								<a href="#none">  
 									<div class="txt-area">
 										<p>
-											<i>10</i>
-											<span>
+											<span class="num">
+												<i>10</i>
+											</span> 
+											<span class="txt">
 												<strong class="tit">[공지] 제주생활공론 가장 작은 캠페인</strong>
 												<em>사람과 사람이 만나 살기 좋은 제주를 연구합니다.사람과 사회가 만나 지속가능한 제주를 실험합니다.</em>
 											</span> 
@@ -212,8 +214,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>9</i>
-											<span>
+											<span class="num">
+												<i>9</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">[공지] 제주생활공론 가장 작은 캠페인</strong> 
 											</span>
 										</p>
@@ -226,8 +230,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>8</i>
-											<span>
+											<span class="num">
+												<i>8</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">[공지] 제주생활공론 가장 작은 캠페인</strong> 
 											</span>
 										</p>
@@ -240,8 +246,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>7</i>
-											<span>
+											<span class="num">
+												<i>7</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">[공지] 제주생활공론 가장 작은 캠페인</strong>
 												<em>사람과 사람이 만나 살기 좋은 제주를 연구합니다.사람과 사회가 만나 지속가능한 제주를 실험합니다.</em>
 											</span>
@@ -255,8 +263,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>6</i>
-											<span>
+											<span class="num">
+												<i>6</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">[공지] 제주생활공론 가장 작은 캠페인</strong>
 												<em>사람과 사람이 만나 살기 좋은 제주를 연구합니다.사람과 사회가 만나 지속가능한 제주를 실험합니다.</em>
 											</span>
@@ -270,8 +280,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>5</i>
-											<span>
+											<span class="num">
+												<i>5</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">[공지] 제주생활공론 가장 작은 캠페인</strong>
 												<em>사람과 사람이 만나 살기 좋은 제주를 연구합니다.사람과 사회가 만나 지속가능한 제주를 실험합니다.</em>
 											</span>
@@ -285,8 +297,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>4</i>
-											<span>
+											<span class="num">
+												<i>4</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">[공지] 제주생활공론 가장 작은 캠페인</strong>
 												<em>사람과 사람이 만나 살기 좋은 제주를 연구합니다.사람과 사회가 만나 지속가능한 제주를 실험합니다.</em>
 											</span>
@@ -300,8 +314,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>3</i>
-											<span>
+											<span class="num">
+												<i>3</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">[공지] 제주생활공론 가장 작은 캠페인</strong>
 												<em>사람과 사람이 만나 살기 좋은 제주를 연구합니다.사람과 사회가 만나 지속가능한 제주를 실험합니다.</em>
 											</span>
@@ -315,8 +331,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>2</i>
-											<span>
+											<span class="num">
+												<i>2</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">[공지] 제주생활공론 가장 작은 캠페인</strong>
 												<em>사람과 사람이 만나 살기 좋은 제주를 연구합니다.사람과 사회가 만나 지속가능한 제주를 실험합니다.</em>
 											</span>
@@ -330,8 +348,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>1</i>
-											<span>
+											<span class="num">
+												<i>1</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">[공지] 제주생활공론 가장 작은 캠페인</strong>
 												<em>사람과 사람이 만나 살기 좋은 제주를 연구합니다.사람과 사회가 만나 지속가능한 제주를 실험합니다.</em>
 											</span>
@@ -370,29 +390,7 @@
 		<!--  // container -->
 
 		<!-- footer -->
-		<footer class="footer">
-			<div class="foot-banner-wrap"> 
-				<div class="inner">
-					<div class="footerbanner">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner01.png" alt="제주시"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner02.png" alt="제주특별자치도"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner03.png" alt="행정안정부"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner04.png" alt="행복나눔제주공동체"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner05.png" alt="중소기업 성공 길잡이 기업마당"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner01.png" alt="제주시"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner02.png" alt="제주특별자치도"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner03.png" alt="행정안정부"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner04.png" alt="행복나눔제주공동체"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner05.png" alt="중소기업 성공 길잡이 기업마당"></a></div>
-						</div>
-					</div>
-					<!-- Add Arrows -->
-					<div class="swiper-button-next"><i>이전</i></div>
-					<div class="swiper-button-prev"><i>다음</i></div>
-				</div> 
-			</div>
-
+		<footer class="footer">  
 			<div class="foot-menu-wrap">
 				<div class="inner">
 					<ul class="foot-menu">
