--- a/소통협력센터/html/communication/press_list.html
+++ b/소통협력센터/html/communication/press_list.html
@@ -197,8 +197,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>10</i>
-											<span>
+											<span class="num">
+												<i>10</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">제주생활공론 가장 작은 캠페인</strong> 
 											</span>
 										</p>
@@ -211,8 +213,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>9</i>
-											<span>
+											<span class="num">
+												<i>9</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">제주생활공론 가장 작은 캠페인</strong>
 											</span>
 										</p>
@@ -225,8 +229,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>8</i>
-											<span>
+											<span class="num">
+												<i>8</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">제주생활공론 가장 작은 캠페인</strong>
 											</span>
 										</p>
@@ -239,8 +245,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>7</i>
-											<span>
+											<span class="num">
+												<i>7</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">제주생활공론 가장 작은 캠페인</strong> 
 											</span>
 										</p>
@@ -253,8 +261,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>6</i>
-											<span>
+											<span class="num">
+												<i>6</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">제주생활공론 가장 작은 캠페인</strong> 
 											</span>
 										</p>
@@ -267,8 +277,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>5</i>
-											<span>
+											<span class="num">
+												<i>5</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">제주생활공론 가장 작은 캠페인</strong> 
 											</span>
 										</p>
@@ -281,8 +293,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>4</i>
-											<span>
+											<span class="num">
+												<i>4</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">제주생활공론 가장 작은 캠페인</strong> 
 											</span>
 										</p>
@@ -295,8 +309,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>3</i>
-											<span>
+											<span class="num">
+												<i>3</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">제주생활공론 가장 작은 캠페인</strong> 
 											</span>
 										</p>
@@ -309,8 +325,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>2</i>
-											<span>
+											<span class="num">
+												<i>2</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">제주생활공론 가장 작은 캠페인</strong> 
 											</span>
 										</p>
@@ -323,8 +341,10 @@
 								<a href="#none">
 									<div class="txt-area">
 										<p>
-											<i>1</i>
-											<span>
+											<span class="num">
+												<i>1</i>
+											</span>
+											<span class="txt">
 												<strong class="tit">제주생활공론 가장 작은 캠페인</strong> 
 											</span>
 										</p>
@@ -361,29 +381,7 @@
 		<!--  // container -->
 
 		<!-- footer -->
-		<footer class="footer">
-			<div class="foot-banner-wrap"> 
-				<div class="inner">
-					<div class="footerbanner">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner01.png" alt="제주시"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner02.png" alt="제주특별자치도"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner03.png" alt="행정안정부"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner04.png" alt="행복나눔제주공동체"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner05.png" alt="중소기업 성공 길잡이 기업마당"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner01.png" alt="제주시"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner02.png" alt="제주특별자치도"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner03.png" alt="행정안정부"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner04.png" alt="행복나눔제주공동체"></a></div>
-							<div class="swiper-slide"><a href="#none"><img src="../../resource/img/@banner05.png" alt="중소기업 성공 길잡이 기업마당"></a></div>
-						</div>
-					</div>
-					<!-- Add Arrows -->
-					<div class="swiper-button-next"><i>이전</i></div>
-					<div class="swiper-button-prev"><i>다음</i></div>
-				</div> 
-			</div>
-
+		<footer class="footer">  
 			<div class="foot-menu-wrap">
 				<div class="inner">
 					<ul class="foot-menu">
