--- a/소통협력센터/publishing_list.html
+++ b/소통협력센터/publishing_list.html
@@ -215,7 +215,7 @@
 			</tr>
 			 
 
-			<!-- 프로그램 -->
+			<!-- 참여안내 -->
 			<tr class="depth1Tr">
 				<td colspan="3">참여안내</td> 
 				<td>-</td>
@@ -227,8 +227,8 @@
 				<td class="dep1"></td>
 				<td class="dep2">프로그램</td>
 				<td class="dep3">목록</td>
-				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
-				<td class="finishD"><span class="ico none">2020.11.30</span></td>
+				<td class="link"><a href="html/program/program_list.html" target="_blank">program_list.html</a></td>
+				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -236,8 +236,8 @@
 				<td class="dep1"></td>
 				<td class="dep2"></td>
 				<td class="dep3">프로그램 검색</td>
-				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
-				<td class="finishD"><span class="ico none">2020.11.30</span></td>
+				<td class="link"><a href="html/program/program_search.html" target="_blank">program_search.html</a></td>
+				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -245,8 +245,8 @@
 				<td class="dep1"></td>
 				<td class="dep2"></td>
 				<td class="dep3">상세</td>
-				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
-				<td class="finishD"><span class="ico none">2020.11.30</span></td>
+				<td class="link"><a href="html/program/program_view.html" target="_blank">program_view.html</a></td>
+				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -254,8 +254,8 @@
 				<td class="dep1"></td>
 				<td class="dep2"></td>
 				<td class="dep3">신청</td>
-				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
-				<td class="finishD"><span class="ico none">2020.11.30</span></td>
+				<td class="link"><a href="html/program/program_write.html" target="_blank">program_write.html</a></td>
+				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -263,8 +263,8 @@
 				<td class="dep1"></td>
 				<td class="dep2">공모사업</td>
 				<td class="dep3">목록</td>
-				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
-				<td class="finishD"><span class="ico none">2020.11.30</span></td>
+				<td class="link"><a href="html/program/business_list.html" target="_blank">business_list.html</a></td>
+				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -272,8 +272,8 @@
 				<td class="dep1"></td>
 				<td class="dep2"></td>
 				<td class="dep3">공모사업 검색</td>
-				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
-				<td class="finishD"><span class="ico none">2020.11.30</span></td>
+				<td class="link"><a href="html/program/business_search.html" target="_blank">business_search.html</a></td>
+				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
@@ -281,8 +281,8 @@
 				<td class="dep1"></td>
 				<td class="dep2"></td>
 				<td class="dep3">상세</td>
-				<td class="link"><a href="html/program/.html" target="_blank">.html</a></td>
-				<td class="finishD"><span class="ico none">2020.11.30</span></td>
+				<td class="link"><a href="html/program/business_view.html" target="_blank">business_view.html</a></td>
+				<td class="finishD"><span class="ico ing">2020.12.01</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
 			</tr>
